replaced images and description

--- a/index.html
+++ b/index.html
@@ -3,93 +3,93 @@
 <title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 <body>
 
-<div class="w3-container w3-teal">
-<h1>Summer Holiday</h1>
-</div>
+    <div class="w3-container w3-teal">
+        <h1>Summer Holiday</h1>
+    </div>
 
-<div class="w3-content">
+    <div class="w3-content">
 
-<div class="w3-row w3-margin">
+        <div class="w3-row w3-margin">
 
-<div class="w3-third">
-  <img src="img/img_5terre.jpg" style="width:100%;min-height:200px">
-</div>
-<div class="w3-twothird w3-container">
-  <h2>5 Terre</h2>
-  <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-  </p>
-</div>
+            <div class="w3-third">
+                <img src="img/img_5terre.jpg" style="width:100%;min-height:200px">
+            </div>
+            <div class="w3-twothird w3-container">
+                <h2>El Nido</h2>
+                <p>
+                    El Nido is a Philippine municipality on Palawan island. It’s known for white-sand beaches, coral reefs and as the gateway to the Bacuit archipelago, a group of islands with steep karst cliffs.
+                </p>
+            </div>
 
-</div>
-<div class="w3-row w3-margin">
+        </div>
+        <div class="w3-row w3-margin">
 
-<div class="w3-third">
-  <img src="img/img_monterosso.jpg" style="width:100%;min-height:200px">
-</div>
-<div class="w3-twothird w3-container">
-  <h2>Monterosso</h2>
-  <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-  </p>
-</div>
+            <div class="w3-third">
+                <img src="img/img_monterosso.jpg" style="width:100%;min-height:200px">
+            </div>
+            <div class="w3-twothird w3-container">
+                <h2>Boracay</h2>
+                <p>
+                    Boracay is a small island in the central Philippines. It's known for its resorts and beaches. Along the west coast, White Beach is backed by palm trees, bars and restaurants.
+                </p>
+            </div>
 
-</div>
-<div class="w3-row w3-margin">
+        </div>
+        <div class="w3-row w3-margin">
 
-<div class="w3-third">
-  <img src="img/img_vernazza.jpg" style="width:100%;min-height:200px">
-</div>
-<div class="w3-twothird w3-container">
-  <h2>Vernazza</h2>
-  <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-  </p>
-</div>
+            <div class="w3-third">
+                <img src="img/img_vernazza.jpg" style="width:100%;min-height:200px">
+            </div>
+            <div class="w3-twothird w3-container">
+                <h2>Puerto Princesa Subterranean River National Park</h2>
+                <p>
+                    The Puerto Princesa Subterranean River National Park is a protected area of the Philippines. The park is located in the Saint Paul Mountain Range on the western coast of the island of Palawan, about 80 kilometres north of the city centre of Puerto Princesa,
+                    and contains the Puerto Princesa Subterranean River.
+                </p>
+            </div>
 
-</div>
-<div class="w3-row w3-margin">
+        </div>
+        <div class="w3-row w3-margin">
 
-<div class="w3-third">
-  <img src="img/img_manarola.jpg" style="width:100%;min-height:200px">
-</div>
-<div class="w3-twothird w3-container">
-  <h2>Manarola</h2>
-  <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-  </p>
-</div>
+            <div class="w3-third">
+                <img src="img/img_manarola.jpg" style="width:100%;min-height:200px">
+            </div>
+            <div class="w3-twothird w3-container">
+                <h2>Cebu City</h2>
+                <p>
+                    Cebu is a province of the Philippines, in the country’s Central Visayas region, comprising Cebu Island and more than 150 smaller surrounding islands and islets. </p>
+            </div>
 
-</div>
-<div class="w3-row w3-margin">
+        </div>
+        <div class="w3-row w3-margin">
 
-<div class="w3-third">
-  <img src="img/img_corniglia.jpg" style="width:100%;min-height:200px">
-</div>
-<div class="w3-twothird w3-container">
-  <h2>Corniglia</h2>
-  <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-  </p>
-</div>
+            <div class="w3-third">
+                <img src="img/img_corniglia.jpg" style="width:100%;min-height:200px">
+            </div>
+            <div class="w3-twothird w3-container">
+                <h2>Batanes</h2>
+                <p>
+                    Batanes is an archipelagic province in the Philippines, administratively part of the Cagayan Valley region. It is the northernmost province in the country, and also the smallest, both in population and land area. Its capital is Basco located on the island
+                    of Batan. </p>
+            </div>
 
-</div>
-<div class="w3-row w3-margin">
+        </div>
+        <div class="w3-row w3-margin">
 
-<div class="w3-third">
-  <img src="img/img_riomaggiore.jpg" style="width:100%;min-height:200px">
-</div>
-<div class="w3-twothird w3-container">
-  <h2>Riomaggiore</h2>
-  <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-  </p>
-</div>
+            <div class="w3-third">
+                <img src="img/img_riomaggiore.jpg" style="width:100%;min-height:200px">
+            </div>
+            <div class="w3-twothird w3-container">
+                <h2>Banaue Rice Terraces</h2>
+                <p>
+                    The Banaue Rice Terraces are terraces that were carved into the mountains of Banaue, Ifugao, in the Philippines, by the ancestors of the indigenous people. The terraces are occasionally called the "Eighth Wonder of the World". </p>
+            </div>
 
-</div>
-</div>
+        </div>
+    </div>
 </body>
-</html>
 
+</html>
